[gd_scene load_steps=8 format=3 uid="uid://cqd2kn8echn77"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_82cyy"]
[ext_resource type="Script" path="res://Script/UI/SelectSkillsPanel.gd" id="2_jrnva"]
[ext_resource type="LabelSettings" uid="uid://c1lap0u84heih" path="res://Assets/LabelSetting/UITitle.tres" id="2_niacq"]
[ext_resource type="Texture2D" uid="uid://pd45atcqjjfu" path="res://Assets/UI/Texture/TitleBar.png" id="3_pkp17"]
[ext_resource type="Texture2D" uid="uid://dtkji1da2ltep" path="res://Assets/UI/Texture/Club.png" id="4_bccbh"]
[ext_resource type="Texture2D" uid="uid://bee3h05vau7ay" path="res://icon.svg" id="4_gsdpm"]
[ext_resource type="LabelSettings" uid="uid://buvwr4pla8wi1" path="res://Assets/LabelSetting/BigWhite.tres" id="5_5m88d"]

[node name="SelectSkillsPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -453.0
offset_top = -817.0
offset_right = 453.0
offset_bottom = 817.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_82cyy")
script = ExtResource("2_jrnva")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
texture = ExtResource("3_pkp17")
patch_margin_left = 56
patch_margin_top = 8
patch_margin_right = 56
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleBar/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_bccbh")
stretch_mode = 3

[node name="Space" type="Control" parent="VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "技能选择"
label_settings = ExtResource("2_niacq")
horizontal_alignment = 1

[node name="Space2" type="Control" parent="VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_bccbh")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_gsdpm")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "未选择技能"
label_settings = ExtResource("5_5m88d")

[node name="CostLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "未选择技能"
label_settings = ExtResource("5_5m88d")

[node name="DescLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "请选择技能"

[node name="AllSkills" type="GridContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="YesBtn" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "确定 消耗500金币"

[node name="CancelBtn" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "返回"
